Version History
===============

v11.4.5
-------

 * added relpath to the oyProjectManager.utils module, which turns paths to
   relative paths to each other

 * the render file path in maya is now calculated relatively to the path
   queried from the workspace image file rule path

 * file paths in nuke are now replaced with a tcl code reading the environment
   variable

v11.4.4
-------

 * Now, the environment variable is set whenever the repository settings is
   read. This eliminates the need of setting the STALKER_REPOSITORY_PATH
   environment variable manually.

v11.4.3
-------

 * finished moving the oyProjectManager to its own mercurial repository (thanks
   to the hg convert tool)

 * converted the project layout to a more common Python package structure
   suitable for PyPI

 * trying to use the forward slashes all over the system internaly

 * :class:`~oyProjectManager.models.environments.photoshopEnv.PhotoshopEnv` is
   renamed to
   :class:`~oyProjectManager.models.environment.photoshopEnv.PhotoshopEnvironment`

 * the output path is now handled by the AssetType class instead of the
   Structure class, it is much suitable to have the AssetType class to handle
   the output paths (still not finished).
 
 * started to block out the
   :class:`~oyProjectManager.models.project.DefaultSEttingsParser`.

 * Added test for the :class:`~oyProjectManager.models.project.Sequence` for
   the new settings structure, which includes the output_path in the type nodes
   under the assetTypes node in the settings file.

 * :class:`~oyProjectManager.models.project.Structure` is not initialized with
   outputFolders argument, and doesn't have any idea what an output folders is
   anymore.

 * :class:`~oyProjectManager.models.project.Sequence` now uses the
   `_settings_dirty` attribute to track down when to save settings file.

v11.3.24
--------

 * fixed maya.env, now it uses the repository relative path when something is
   referenced.
